Update version information

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "David Jensen <david.lgj@gmail.com>",
     "Cameron Edwards",
     "Mike Marcacci",
-    "Denis Dervisevic <denis@dervisevic.se>"
+    "Denis Dervisevic <denis@dervisevic.se>",
+    "Ben watson"
   ],
   "moduleType": [
     "globals"
