--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-schema-form",
-  "version": "0.8.12",
+  "version": "0.8.13",
   "description": "Create complex forms from a JSON schema with angular.",
   "repository": "Textalk/angular-schema-form",
   "main": "dist/schema-form.min.js",
@@ -14,7 +14,8 @@
     "David Jensen <david.lgj@gmail.com> (https://github.com/davidlgj)",
     "Denis Dervisevic <denis@dervisevic.se> (https://github.com/Dervisevic)",
     "Cameron Edwards (https://github.com/cameronprattedwards)",
-    "Mike Marcacci (https://github.com/mike-marcacci)"
+    "Mike Marcacci (https://github.com/mike-marcacci)",
+    "Ben Watson"
   ],
   "license": "MIT",
   "dependencies": {
